shader tweaks, Kaleidoscope setup, base provider/modifier setup